--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html -p 3001"
+    "start": "node server.js",
+    "nodemon": "nodemon server.js",
+    "parcel": "parcel watch ./index.html",
+    "dev": "concurrently --kill-others \"npm run parcel\" \"npm run nodemon\""
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +17,15 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
+    "concurrently": "^4.1.0",
     "node-sass": "^4.11.0",
-    "parcel": "^1.12.3",
+    "nodemon": "^1.18.11",
+    "parcel-bundler": "^1.11.0",
     "prettier": "^1.17.0",
     "sass": "^1.19.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.16.4",
     "moment-es6": "^1.0.0",
     "react": "^16.8.6",
