--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "knex": "^0.16.5",
     "moment-es6": "^1.0.0",
     "pg": "^7.10.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^5.0.0"
   }
 }
