Add cors dependency for cross origin resource sharing

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jquery": "^3.4.0",
     "knex": "^0.16.5",
