--- a/firefoxAddOn/manifest.json
+++ b/firefoxAddOn/manifest.json
@@ -1,24 +1,24 @@
 {
-    "manifest_version": 2,
-    "name": "Beastify",
-    "version": "1.0",
-    "description": "Adds a browser action icon to the toolbar. Click the button to choose a beast. The active tab's body content is then replaced with a picture of the chosen beast. See https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Examples#beastify",
-    "homepage_url": "https://github.com/mdn/webextensions-examples/tree/master/beastify",
-    "icons": {
-        "48": "icons/beasts-48.png",
-        "96": "icons/beasts-96.png"
-    },
-    "permissions": [
-        "activeTab"
-    ],
-    "browser_action": {
-        "default_icon": "icons/beasts-32.png",
-        "default_title": "Beastify",
-        "default_popup": "popup/choose_beast.html"
-    },
-    "web_accessible_resources": [
-        "beasts/frog.jpg",
-        "beasts/turtle.jpg",
-        "beasts/snake.jpg"
-    ]
+  "manifest_version": 2,
+  "name": "Buffering",
+  "version": "1.0",
+  "description": "No Desc",
+  "icons": {
+    "48": "icons/beasts-48.png",
+    "96": "icons/beasts-96.png"
+  },
+  "permissions": ["activeTab", "*://localhost:8080/*", "webRequest"],
+  "background": {
+    "scripts": ["./background_scripts/background.js"]
+  },
+  "browser_action": {
+    "default_icon": "icons/beasts-32.png",
+    "default_title": "Buffering",
+    "default_popup": "./popup/choose_beast.html"
+  },
+  "web_accessible_resources": [
+    "beasts/frog.jpg",
+    "beasts/turtle.jpg",
+    "beasts/snake.jpg"
+  ]
 }
