--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "fetch-node": "0.0.1",
     "jquery": "^3.4.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "moment-es6": "^1.0.0",
     "pg": "^7.10.0",
