--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^3.0.6",
     "express": "^4.16.4",
     "jquery": "^3.4.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "moment-es6": "^1.0.0",
     "node-fetch": "^2.4.1",
