--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "express": "^4.16.4",
+    "google-auth-library": "^3.1.2",
+    "googleapis": "^39.2.0",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "moment-es6": "^1.0.0",
     "node-fetch": "^2.4.1",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^7.10.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
