--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -25,6 +25,6 @@
       "js": ["./content/jquery-3.4.0.min.js", "./content/content.js"]
     }
   ],
-  "permissions": ["tabs", "activeTab", "<all_urls>"],
+  "permissions": ["tabs", "activeTab", "<all_urls>", "cookies"],
   "web_accessible_resources": ["./css/test.css", "/vendor/geoBootstrap.css"]
 }
