--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "chart.js": "^2.8.0",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
