--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,14 @@
-{ "plugins": ["@babel/plugin-proposal-class-properties"]}
+{
+  "plugins": [["@babel/plugin-proposal-class-properties"], ["@babel/transform-runtime"]],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [">0.25%", "not ie 11", "not op_mini all"]
+        }
+      }
+    ],
+    "@babel/preset-react"
+  ]
+}
