--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -5,8 +5,10 @@
   "description": "Ruin your browser experience if you haven't achieved your fitness goals",
   "browser_action": {
     "default_icon": {
-      "16": "./icons/get_started16.png",
-      "32": "/icons/get_started32.png"
+      "16": "./icons/16.png",
+      "32": "./icons/32.png",
+      "48": "./icons/48.png",
+      "128": "./icons/128.png"
     },
     "default_title": "Buffering",
     "default_popup": "./popup/popup.html"
