--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -24,7 +24,8 @@
     {
       "matches": ["<all_urls>"],
       "exclude_globs": ["*://localhost:3000/*", "*://accounts.google.com/*"],
-      "js": ["./content/jquery-3.4.0.min.js", "./content/content.js"]
+      "js": ["./content/jquery-3.4.0.min.js", "./content/content.js"],
+      "run_at": "document_start"
     }
   ],
   "permissions": ["tabs", "activeTab", "<all_urls>", "cookies"],
