change style for better

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -13,9 +13,9 @@
     "default_title": "Buffering",
     "default_popup": "./popup/popup.html"
   },
-  "chrome_url_overrides": {
-    "newtab": "./newtab/newTab.html"
-  },
+  // "chrome_url_overrides": {
+  //   "newtab": "./newtab/newTab.html"
+  // },
   "background": {
     "scripts": ["./background/background.js"],
     "persistent": false
