--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -29,5 +29,5 @@
     }
   ],
   "permissions": ["tabs", "activeTab", "<all_urls>", "cookies"],
-  "web_accessible_resources": ["/vendor/geoBootstrap.css", "/vendor/img/*", "icons/*"]
+  "web_accessible_resources": ["/vendor/geoBootstrap.css", "/vendor/img/*", "icons/*", "/fonts/big-black-bear-italic.otf"]
 }
