--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "parcel": "parcel watch ./src/index.html",
     "dev": "concurrently --kill-others \"npm run parcel\" \"npm run nodemon\""
   },
-  "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
-  },
   "author": "Aleksey, Ratt, Jerry",
   "license": "ISC",
   "devDependencies": {
@@ -24,11 +20,9 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "concurrently": "^4.1.0",
-    "node-sass": "^4.11.0",
     "nodemon": "^1.18.11",
     "parcel-bundler": "^1.11.0",
-    "prettier": "^1.17.0",
-    "sass": "^1.19.0"
+    "prettier": "^1.17.0"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
