configured for both development and production

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 node_modules
-.env
 .cache
 .DS_Store
 chrome_extension/.DS_Store
 chrome_extension/icons/.DS_Store
-.prettierrc
-.babelrc
-.eslintrc
-src
+dist
