--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-CLIENT_ID=677038605397-j26crueetoelsf8vh5f9pde9l93707r7.apps.googleusercontent.com
-CLIENT_SECRET=RF0NkBR0ZB9leQSxpEbWce9y
+CLIENT_ID=
+CLIENT_SECRET=
 SCOPES=https://www.googleapis.com/auth/fitness.activity.read
 REDIRECT_URI=http://localhost:3000
 DB_HOST=localhost
@@ -8,3 +8,4 @@ DB_PASS=coolkid
 DB_NAME=buffering
 DB_PORT=5432
 PORT=3000
+SESSION_KEY=
