--- a/package.json
+++ b/package.json
@@ -12,38 +12,37 @@
   "author": "Aleksey, Ratt, Jerry",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.11",
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.3",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.17.0",
-    "sass": "^1.22.12"
+    "prettier": "^1.18.2",
+    "sass": "^1.23.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.6.0",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "fetch-node": "0.0.1",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.16.5",
+    "knex": "^0.19.4",
     "moment-es6": "^1.0.0",
-    "node-fetch": "^2.4.1",
     "pg": "^7.12.1",
-    "reac": "0.0.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-google-login": "^5.0.4",
-    "react-router-dom": "^5.0.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-google-login": "^5.0.5",
+    "react-router-dom": "^5.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   }
